add crudl operations for league entity
