# internal/controller/http/v1/router.go
@@ -17,7 +17,7 @@ import (
 // @host        localhost:8080
 // @schemes 	http
 // @BasePath    /v1
-func NewRouter(handler *gin.Engine, p usecase.Player, a usecase.Award, g usecase.Game, l logger.Interface) {
+func NewRouter(handler *gin.Engine, p usecase.Player, a usecase.Award, g usecase.Game, lg usecase.League, l logger.Interface) {
 	handler.Use(gin.Logger())
 	handler.Use(gin.Recovery())
 
@@ -29,5 +29,6 @@ func NewRouter(handler *gin.Engine, p usecase.Player, a usecase.Award, g usecase
 		newPlayerRoutes(h, p, l)
 		newAwardRoutes(h, a, l)
 		newGameRoutes(h, g, l)
+		newLeagueRoutes(h, lg, l)
 	}
 }
